network-policy/base/cilium/global-policies/coil-nat.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: coil-nat-allow
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: coil
            app.kubernetes.io/component: egress
      toPorts:
        - ports:
            - port: "5555"
              protocol: UDP
