network-policy/base/cilium/global-policies/controller-manager.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-controller-manager-metrics-allow
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  endpointSelector: {}
  egress:
    - toCIDR:
        - 10.69.0.0/16
      toPorts:
        - ports:
            - port: "10252"
              protocol: TCP
