network-policy/base/cilium/global-policies/egress-backyard-deny.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-bastion-deny
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  endpointSelector: {}
  egressDeny:
    - toCIDRSet:
        - cidr: 10.72.48.0/24
        - cidr: 10.72.80.0/24
        - cidr: 10.76.48.0/24
        - cidr: 10.76.80.0/24
        - cidr: 10.78.48.0/24
        - cidr: 10.78.80.0/24
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-switch-deny
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  endpointSelector: {}
  egressDeny:
    - toCIDRSet:
        - cidr: 10.72.0.0/20
        - cidr: 10.76.0.0/20
        - cidr: 10.78.0.0/20
