network-policy/base/cilium/global-policies/egress-cluster-allow.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-cluster-allow
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  endpointSelector: {}
  egress:
    - toCIDRSet:
      - cidr: 10.64.0.0/14
      - cidr: 10.68.0.0/16
