network-policy/base/cilium/global-policies/ingress-cluster-allow.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: ingress-cluster-allow
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  endpointSelector: {}
  ingress:
    - fromCIDR:
        - 10.0.0.0/8
