network-policy/base/cilium/global-policies/node-dns.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-node-dns-allow
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  endpointSelector: {}
  egress:
    - toPorts:
        - ports:
            - port: "53"
              protocol: TCP
        - ports:
            - port: "53"
              protocol: UDP
      # toCIDR:
      # - 10.69.0.0/16
